Fix casting/conversion oversights